--- a/style.css
+++ b/style.css
@@ -3358,10 +3358,20 @@ a {
 .news_page_l_content > img {
     margin-bottom: 60px;
 }
+.news_page_l_content>*:nth-child(1){
+    margin-top: 0;
+}
+.news_page_l_content>img,
+.news_page_l_content>figure{
+    max-width: 100%;
+    margin: 30px 0;
+}
 
-.news_page_l_content_size {
+.news_page_l_content_size>*{
     max-width: 740px;
-    margin: 0 auto;
+    margin: auto auto;
+}
+.news_page_l_content_size {
     position: relative;
 }
 
@@ -3378,6 +3388,7 @@ a {
     font-weight: normal;
     font-size: 18px;
     line-height: 28px;
+    display: flex;
 }
 
 .news_page_l_content_size ul li::before {
