--- a/src/templates/components/footer.twig
+++ b/src/templates/components/footer.twig
@@ -3,5 +3,6 @@
     <footer>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script  src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
     <script src="js/app.js"></script>
 {% endblock %}
