--- a/src/templates/layouts/default.twig
+++ b/src/templates/layouts/default.twig
@@ -1,25 +1,237 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>{{ head_title }} &middot; Frontie</title>
+    <title>{{ head_title }}</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
+
     <script
             src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
             crossorigin="anonymous"></script>
 </head>
 
-<body{% if body_class is defined and body_class is not empty %} class="container_all {{ body_class }}"{% endif %}>
+<body{% if body_class is defined and body_class is not empty %} class="{{ body_class }}"{% endif %}>
+<header>
+    <div class="logo_image">
+        <img src="../../assets/img/logo.svg" alt="">
+    </div>
+    <div class="header_info">
+        <div class="ui selection dropdown all_dropdown">
+            <input type="hidden" name="gender">
+            <i class="dropdown icon"></i>
+            <div class="text">
+                Рус
+            </div>
+            <div class="menu">
+                <div class="item" data-value="1">
+                    <a href="#">Eng</a>
+                </div>
+                <div class="item" data-value="0"><a href="#">Укр</a></div>
+                <div class="item active selected" data-value="0"><a href="#">Рус</a></div>
+            </div>
+        </div>
+        <div class="city_button">
+            <div class="ui custom button">Ивано-Франковск</div>
+        </div>
+        <div class="ui custom popup city_popup">
+            <div class="city_popup_text">
+                Выбирите город
+            </div>
+            <div class="content_city">
+                <div class="content_city_text">Ивано-Франковск</div>
+                <div class="content_city_text">Киев</div>
+                <div class="content_city_text">Харьков</div>
+                <div class="content_city_text">Одесса</div>
+                <div class="content_city_text">Днепр</div>
+                <div class="content_city_text">Черновцы</div>
+                <div class="content_city_text">Чернигов</div>
+                <div class="content_city_text">Львов</div>
+                <div class="content_city_text">Хмельницкий</div>
+                <div class="content_city_text">Житомир</div>
+                <div class="content_city_text">Апостолово</div>
+            </div>
+            <div class="ui icon search input search_city">
+                <input type="text" placeholder="Или введите другой город">
+            </div>
+        </div>
+        <div class="phone_popup_header icon_all">
+            <div class="phone_popup_text">
+                0 800 123 560
+            </div>
+            <i class="dropdown icon"></i>
+        </div>
+        <div class="ui custom popup popup_all phone_popup">
+            <a href="tel:+380800123560" class="link_call">Заказать звонок</a>
+            <div class="social_link">
+                <a href="#" class="social_link_item">
+                    <div class="social_img">
+                        <img src="../../assets/img/svg/Chat.svg" alt="">
+                    </div>
+                    <div class="social_text">
+                        Чат на сайте
+                    </div>
+                </a>
+                <a href="#" class="social_link_item">
+                    <div class="social_img">
+                        <img src="../../assets/img/svg/Messenger.svg" alt="">
+                    </div>
+                    <div class="social_text">
+                        Messenger
+                    </div>
+                </a>
+                <a href="#" class="social_link_item">
+                    <div class="social_img">
+                        <img src="../../assets/img/svg/Viber.svg" alt="">
+                    </div>
+                    <div class="social_text">
+                        Viber
+                    </div>
+                </a>
+                <a href="#" class="social_link_item">
+                    <div class="social_img">
+                        <img src="../../assets/img/svg/What’s_app.svg" alt="">
+                    </div>
+                    <div class="social_text">
+                        What’s app
+                    </div>
+                </a>
+                <a href="#" class="social_link_item">
+                    <div class="social_img">
+                        <img src="../../assets/img/svg/Telegram.svg" alt="">
+                    </div>
+                    <div class="social_text">
+                        Telegram
+                    </div>
+                </a>
+            </div>
+            <span>с 08:00 до 21:00</span>
+            <p>Бесплатно по Украине</p>
+        </div>
+        <div class="buyer_popup_header icon_all">
+            <div class="phone_popup_text">
+                Покупателям
+            </div>
+            <i class="dropdown icon"></i>
+        </div>
+        <div class="ui custom popup popup_all buyer_popup">
+            <ul class="buyer_popup_link">
+                <li>
+                    <a href="#">О компании</a>
+                </li>
+                <li>
+                    <a href="#">Доставка и оплата</a>
+                </li>
+                <li>
+                    <a href="#">Гарантия и Возврат</a>
+                </li>
+                <li>
+                    <a href="#">Наши услуги</a>
+                </li>
+                <li>
+                    <a href="#">Просто качественно</a>
+                </li>
+                <li>
+                    <a href="#">Полезные статьи</a>
+                </li>
+                <li>
+                    <a href="#">Вопрос - ответ</a>
+                </li>
+                <li>
+                    <a href="#">Дизайнерам</a>
+                </li>
+                <li>
+                    <a href="#">Портфолио работ</a>
+                </li>
+                <li>
+                    <a href="#">Контакты </a>
+                </li>
+            </ul>
+        </div>
+        <div class="button_all text_bold_s">
+            Онлайн конструктор
+        </div>
+        <div class="icon_container">
+            <div class="icon_img login_icon">
+                <img src="../../assets/img/svg/Log_in.svg" alt="">
+            </div>
+            <div class="icon_img eye_icon">
+                <img src="../../assets/img/svg/eye.svg" alt="">
+                <div class="label_icon">
+                    33
+                </div>
+            </div>
+            <div class="icon_img libra_icon">
+                <img src="../../assets/img/svg/Libra.svg" alt="">
+                <div class="label_icon gray">
+                    0
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="button_all button_header">Вызвать замерщика</div>
+    <div class="basket_button">
+        <div class="icon_img basket_icon">
+            <img src="../../assets/img/svg/basket.svg" alt="">
+            <div class="label_icon">
+                5
+            </div>
+        </div>
+    </div>
+</header>
+<div class="header_bottom">
+    <nav class="menu_list">
+        <ul class="menu_list_grid">
+            <li class="icon_all">
+                <a class="menu_list_link">
+                    Жалюзи
+                </a>
+                <i class="dropdown icon"></i>
 
+            </li>
+            <li class="icon_all">
+                <a class="menu_list_link">
+                    Тканевые ролеты
+                </a>
+                <i class="dropdown icon"></i>
+            </li>
+            <li class="icon_all">
+                <a class="menu_list_link">
+                    Римские шторы
+                </a>
+                <i class="dropdown icon"></i>
+            </li>
+            <li class="icon_all">
+                <a class="menu_list_link">
+                    Рулонные шторы
+                </a>
+                <i class="dropdown icon"></i>
+            </li>
+            <li class="icon_all">
+                <a class="menu_list_link">
+                    Жалюзи День-Ночь
+                </a>
+                <i class="dropdown icon"></i>
+            </li>
+        </ul>
+    </nav>
+    <div class="ui icon search input search_header_b">
+        <i class="search icon"></i>
+        <input type="text" placeholder="Поиск по сайту ">
+    </div>
+</div>
 {% block page %}{% endblock %}
 {% block footer %}{% endblock %}
 
